--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
+# MONGO_URI = "mongodb+srv://ritikagaur2005:dSssamwCwr3xI8G3@cluster0.jf7u9.mongodb.net/Social"
+
+# PORT = 3000
+
+
+# JWT_SECRET = "Rits"
+
 MONGO_URI = "mongodb+srv://ritikagaur2005:dSssamwCwr3xI8G3@cluster0.jf7u9.mongodb.net/Social"
 
-PORT = 3000
+PORT = 0.0.0.0
 
 
 JWT_SECRET = "Rits"
